University_system/force-app/main/default/objects/Cabinet__c/fields/Specialisation__c.field-meta.xml
<CustomField>
    <fullName>Specialisation__c</fullName>
    <label>Specialisation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>-</fullName>
            </value>
            <value>
                <fullName>Dekanat</fullName>
            </value>
            <value>
                <fullName>Laboratory</fullName>
            </value>
            <value>
                <fullName>Service room</fullName>
            </value>
            <value>
                <fullName>Sport room</fullName>
            </value>
            <value>
                <fullName>Study room</fullName>
            </value>
            <value>
                <fullName>Teacher room</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>